--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,26 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,700;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./root.css">
     <title>SyncMe</title>
   </head>
   <body>
-    <noscript>You need Js.<br />Bruh! :( </noscript>
+    <noscript>
+      <center>
+        <br />
+        <br />
+        <br />
+        You need Js.
+        <br />
+        <br />
+        <br />
+        <img src="bruh-seriously.gif" alt="Bruh!">
+        <br />
+        <br />
+        <br />
+        Bruh! :( 
+      </center>
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
